# pipeline

./: .dockerignore  .env.example  .gitignore  .mcp.json  .yarnrc.yml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  package.json
.claude/: settings.json
.claude/agents/: coder.md  planner.md  reviewer.md  ux-tester.md
.claude/skills/coder/: SKILL.md
.claude/skills/harness-init/: SKILL.md
.claude/skills/issue/: SKILL.md
.claude/skills/manager/: SKILL.md
.claude/skills/pipeline-audit/: SKILL.md
.claude/skills/pipeline-continue/: SKILL.md
.claude/skills/planner/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/test-fast/: SKILL.md
.claude/skills/ux-reviewer/: SKILL.md
.claude/skills/ux-tester/: SKILL.md
.codex/skills/coder/: SKILL.md
.codex/skills/issue/: SKILL.md
.codex/skills/manager/: SKILL.md
.codex/skills/planner/: SKILL.md
.codex/skills/ux-reviewer/: SKILL.md
.codex/skills/ux-tester/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: docker-build-and-push.yml  lint.yml  tests.yml  user-docs.yml
.husky/: pre-commit
crates/shared/migrations/: 20260421000002_token_transfers.sql
crates/shared/src/: db.rs  log_mapper.rs
docker/frontend/: entrypoint.sh  nginx.conf
docs/: CNAME  FRONTEND.md  ISSUE_PROTOCOL.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  STORIES.md  initial_spec.md
docs.local/: manager_abi.txt
docs/design-docs/: core-beliefs.md  index.md  multi-chain-kyc-sharding.md  relayer-security-model.md  split-rail-architecture.md  whitelist-enforcement-model.md
docs/exec-plans/: known-bugs.md  tech-debt-tracker.md
docs/exec-plans/active/: issue-100-deposit-figma-icons.md  issue-101-deposit-route.md  issue-117-transactions-route.md  issue-181-evm-wallet-connection.md  issue-186-conversion-card-two-cards.md  issue-198-activity-icon-tones.md  issue-202-recent-activity-empty-illustration.md  issue-211-deposit-manager-hook.md  issue-220-use-token-hook.md  (+96 more)
docs/frontend/: hooks.md  index.md  utils.md
docs/product-specs/: api-authorization.md  audit-logging.md  bridge-service-internals.md  bridge-service.md  collateral-valuation.md  dashboards.md  deposits.md  index.md  loans-data.md  loans.md  lp-onboarding.md  operations-console-team.md  operations-console.md  price-feed.md  relayer-service-internals.md  relayer-service.md  security-defenses.md  security.md  smart-contracts-interfaces.md  smart-contracts-operations.md  smart-contracts-registry.md  smart-contracts.md  staking.md  trustee-console.md  trustee-dashboard.md  user-stories.md  withdrawals.md  yield.md
docs/references/: backend.md  index.md  overview.html  security.md  smart-contracts.md
docs/user-docs/: CNAME  Gemfile  _config.yml  borrowers.md  defaults-and-losses.md  glossary.md  index.md  legal.md  risks.md
docs/user-stories/: index.md
scripts/: lint-docs.ts  wt
(+268 files in other folders)
