[workspace]
members = [
    "packages/api",
    "packages/worker",
    "packages/shared",
]
resolver = "2"

[workspace.dependencies]
alloy             = { version = "0.8", features = ["provider-http", "sol-types", "rpc-types"] }
reqwest           = { version = "0.12", features = ["json"] }
alloy-primitives  = "0.8"
anyhow            = "1"
async-trait       = "0.1"
bigdecimal        = "0.4"
chrono            = { version = "0.4", features = ["serde"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
sqlx              = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "bigdecimal", "chrono"] }
tokio             = { version = "1", features = ["full"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy            = "0.15"
axum              = "0.8"
tower             = "0.5"
tower-http        = { version = "0.6", features = ["cors"] }
utoipa            = { version = "5" }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
