[workspace]
members = [
    "packages/api",
    "packages/worker",
    "packages/shared",
]
resolver = "2"

[workspace.dependencies]
alloy             = { version = "0.8", features = ["provider-http", "sol-types", "rpc-types", "signers", "signer-local", "contract"] }
reqwest           = { version = "0.12", features = ["json"] }
alloy-primitives  = "0.8"
anyhow            = "1"
async-trait       = "0.1"
bigdecimal        = { version = "0.4", features = ["serde-json"] }
chrono            = { version = "0.4", features = ["serde"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
sqlx              = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "bigdecimal", "chrono"] }
tokio             = { version = "1", features = ["full"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy            = "0.15"
axum              = "0.8"
tower             = "0.5"
tower-http        = { version = "0.6", features = ["cors", "trace"] }
utoipa            = { version = "5" }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# EVM ↔ SQL type conversions require these casts pervasively
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
# Doc lints — not worth enforcing backticks on every identifier
doc_markdown = "allow"
# Too noisy for existing codebase
too_many_lines = "allow"
return_self_not_must_use = "allow"
# Generated by #[derive(OpenApi)] macro — can't fix
needless_for_each = "allow"
